test/fail_compilation/fail251.d
bool foo() {
        foreach (x; xs) {}
        return true;
}

static assert(foo());
